kiosk: Install secondary app after DelayNetworkCall

Secondary apps install happens after network is configured. Wrap the
actual install call with DelayNetworkCall to avoid failure caused
by flaky network status.

BUG=600878

Review URL: https://codereview.chromium.org/1904323002

Cr-Commit-Position: refs/heads/master@{#389558}

Former-commit-id: 35fa7b8dd3254770833edf5326ef24410b3613b1